--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .header {
-    background-color: #1f2937;
+    background-color: #1F2937;
     display: flex;
     justify-content: space-between;
     padding: 50px;
@@ -30,7 +30,7 @@ li {
 }
 
 .container {
-    background-color: #1f2937;
+    background-color: #1F2937;
     display: flex;
     justify-content: space-around;
     padding: 50px;
@@ -50,11 +50,21 @@ li {
 
 .main_text {
     font-size: 48px;
-    color: #f9faf8;
+    color: #F9FAF8;
     font-weight: bolder;
 }
 
 .secondary_text {
     font-size: 18px;
     color: #E5E7EB;
+}
+
+
+
+.footer {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    background-color: #1F2937;
+    color: #F9FAF8;
 }
