--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1;
 }
 
 .header {
@@ -43,11 +42,6 @@ li {
     gap: 10px;
 }
 
-.sign_up {
-    background-color: #3882F6;
-    max-width: 100px;
-}
-
 .main_text {
     font-size: 48px;
     color: #F9FAF8;
@@ -59,10 +53,79 @@ li {
     color: #E5E7EB;
 }
 
+.middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin: 25px;
+}
 
+.info_header {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bolder;
+}
+
+.gallery {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    gap: 25px;
+}
+
+.captions {
+    max-width: 200px;
+}
+
+.quote_box {
+    display: flex;
+    flex-direction: column;
+}
+
+.quote {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.thor {
+    font: bolder;
+    align-self: flex-end;
+}
+
+button, img{
+    border-radius: 5px;    
+}
+
+button {
+    color: #F9FAF8;
+    background-color: #3882F6;
+    max-width: 100px;
+}
+
+.action {
+    display: flex;
+    background-color: #3882F6;
+    justify-content: space-between;
+    padding: 50px;
+    margin: 15px;
+}
+
+.action_title{
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.action_text {
+    color: #F9FAF8;
+}
 
 .footer {
     display: flex;
+    /* flex: 1; */
     justify-content: center;
     padding: 20px;
     background-color: #1F2937;
